Fixed overflow of particlesjs and updated readme

--- a/main.scss
+++ b/main.scss
@@ -12,9 +12,10 @@ $primary-invert: $purple-invert;
 /* Custom CSS */
 #particles-js {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 0;
+  overflow: hidden;
 }
 
 .card.has-text-centered {
